# Gendiff

./: .gitignore  Makefile  README.md  gendiff_help  gendiff_json  gendiff_json_yml  gendiff_yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
gendiff/: __init__.py  file_loader.py  gendiff.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code/: __init__.py  file_loader.py  gendiff.py
hexlet_code/scripts/: __init__.py  gendiff.py
tests/: test_gendiff.py  test_gendiff_json.py  test_gendiff_json2.py  test_gendiff_stylish.py  test_gendiff_yaml.py
tests/fixtures/: file3.json  file4.yml  result_different_files_json.txt  result_generate_diff_stylish.txt  result_one_empty_file_json.txt  result_one_file_empty_plain.txt
